--- a/README.org
+++ b/README.org
@@ -5,4 +5,4 @@
    npm install https://github.com/gravitywp/hexo-renderer-orgmode.git --save
    #+END_SRC
 ** TODOLIST
-*** DONE Support org mode table.
+*** DONE Support org mode table. DONE.
